<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feed reader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_add_feed">Add feed</string>
    <string name="action_settings">Settings</string>
    <string name="article_image_description">article\'s image, if it has</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="feed_name">Feed name</string>
    <string name="favourite_image_description">is article add to favourite</string>
    <string name="today">Today, </string>
    <string name="all_name">All feeds</string>
    <string name="favourite_name">Favourite</string>
    <string name="delete_item">Delete feed</string>
    <string name="edit_item">Edit feed</string>
    <string name="pull_to_refresh">Pull to refresh…</string>
    <string name="refreshing">Loading…</string>
    <string name="search_button">Search</string>
    <string name="search_hint">Type Feed or RSS name…</string>
    <string name="title_activity_edit_feed">Add new feed</string>
    <string name="title_section1">Input</string>
    <string name="title_section2">Search</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="hint_address">(feed)</string>
    <string name="hint_name">(optional)</string>
    <string name="add_button">Add feed</string>
    <string name="edit_button">Change</string>
    <string name="share">Share</string>
    <string name="title_activity_article">Article</string>
    <string name="add_to_favourite">Add to favourite</string>
\        <string name="share_via">Share via</string>
    <string name="detail" formatted="false">
        <![CDATA[
            <b>%s</b>
            <br>%s</br>
            <br>%s</br>
            <a href=%s>Go to the website</a>
        ]]>
    </string>
    <string name="auto_sync_enable">Autosync</string>
    <string name="title_activity_edit_feed_info">Edit feed</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="bad_internet_connection">Connection to server failed. Check your internet connection or try again later</string>

</resources>
