<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/address_text" />

    <EditText
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_address"
        android:id="@+id/edit_address"
        android:inputType="textUri" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/name_text"/>

    <EditText
        android:layout_width="254dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:id="@+id/edit_name"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:id="@+id/add_button" />
</LinearLayout>