<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/card">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/article_image"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/article_image_description"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/article_title"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/description"
            android:id="@+id/article_description"
            android:maxLines="3"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:weightSum="1"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date"
            android:id="@+id/article_date"
            android:textSize="13sp"
            android:layout_marginTop="2dp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="20dp"
            android:id="@+id/favourite_image"
            android:contentDescription="@string/favourite_image_description"
            android:clickable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/article_item_feed_name"
            android:gravity="right"
            android:text="@string/feed_name" />

    </LinearLayout>
</LinearLayout>